Frequency, duty, min, max measurement. Scope 2 auto scaled to time and amplitude. ADC frequency now timer based to 100kHz.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,118 @@
 
 # Debug files
 *.dSYM/
+/Debug/Application/SW4STM32/subdir.mk
+/Debug/Application/User/Src/adc.d
+/Debug/Application/User/Src/audio.d
+/Debug/Application/User/Src/dcmi.d
+/Debug/Application/User/Src/display.d
+/Debug/Application/User/Src/dma2d.d
+/Debug/Application/User/Src/dma.d
+/Debug/Application/User/Src/eeprom.d
+/Debug/Application/User/Src/eth.d
+/Debug/Application/User/Src/fmc.d
+/Debug/Application/User/Src/gpio.d
+/Debug/Application/User/Src/i2c.d
+/Debug/Application/User/Src/jingle.d
+/Debug/Application/User/Src/jpg_data.d
+/Debug/Application/User/Src/ltdc.d
+/Debug/Application/User/Src/main.d
+/Debug/Application/User/Src/measurement.d
+/Debug/Application/User/Src/printf.d
+/Debug/Application/User/Src/quadspi.d
+/Debug/Application/User/Src/rtc.d
+/Debug/Application/User/Src/sai.d
+/Debug/Application/User/Src/sdmmc.d
+/Debug/Application/User/Src/setup.d
+/Debug/Application/User/Src/stm32f7xx_hal_msp.d
+/Debug/Application/User/Src/stm32f7xx_it.d
+/Debug/Application/User/Src/subdir.mk
+/Debug/Application/User/Src/tim.d
+/Debug/Application/User/Src/tjpgd.d
+/Debug/Application/User/Src/usart.d
+/Debug/Application/User/Src/usb_otg.d
+/Debug/Application/User/Src/voice.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_audio.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_camera.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_eeprom.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_lcd.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_qspi.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_sd.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_sdram.d
+/Debug/Drivers/BSP/STM32746G-Discovery/stm32746g_discovery_ts.d
+/Debug/Drivers/BSP/STM32746G-Discovery/subdir.mk
+/Debug/Drivers/CMSIS/Device/ST/STM32F7xx/Source/subdir.mk
+/Debug/Drivers/CMSIS/Device/ST/STM32F7xx/Source/system_stm32f7xx.d
+/Debug/Drivers/CMSIS/subdir.mk
+/Debug/Drivers/Components/ft5336/ft5336.d
+/Debug/Drivers/Components/ft5336/subdir.mk
+/Debug/Drivers/Components/wm8994/subdir.mk
+/Debug/Drivers/Components/wm8994/wm8994.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_adc.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_adc_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_can.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cec.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cortex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_crc.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_crc_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cryp.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_cryp_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dac_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dcmi.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dcmi_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma2d.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_dma_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_eth.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_flash_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_gpio.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hash.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hash_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_hcd.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2c_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_i2s.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_irda.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_iwdg.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_lptim.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_ltdc.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_nand.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_nor.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pcd_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_pwr_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_qspi.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rcc_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rng.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rtc.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_rtc_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sai.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sai_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sd.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sdram.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_smartcard.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_smartcard_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_spdifrx.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_spi.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_sram.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_tim_ex.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_uart.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_usart.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_hal_wwdg.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_fmc.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_sdmmc.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/stm32f7xx_ll_usb.d
+/Debug/Drivers/STM32F7xx_HAL_Driver/Src/subdir.mk
+/Debug/makefile
+/Debug/objects.list
+/Debug/objects.mk
+/Debug/output.map
+/Debug/sources.mk
+/Debug/WeldingMeter Configuration.bin
